working on notebook

--- a/DecisionTrees.ipynb
+++ b/DecisionTrees.ipynb
@@ -1,15 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Decision Trees\n",
+    "\n",
+    "A nonlinear, human-readable classification or regression tool\n",
+    "\n",
+    "## Cereal Data\n",
+    "\n",
+    "Pulled some data off of Kaggle: <https://www.kaggle.com/crawford/80-cereals>\n",
+    "\n",
+    "Let's learn about Cereal!"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    ""
-   ]
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "input_file = \"data/cereal.csv\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Pandas is a great tool for manipulating data and provide a great datastructure\n",
+    "called a [DataFrame](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html)\n",
+    "\n",
+    "<https://pandas.pydata.org>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# easily pull in csv data with pandas dataframes\n",
+    "dataset = pd.read_csv(input_file)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
